fix bullet points on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -75,6 +75,7 @@ body {
 
 .post-content ul {
     list-style-type: circle;
+    list-style-position: inside;
 }
 
 .post-content ol {
